DigIt CHANGE LOG
======================

2025/07/30 Deleted use of TResolutionUnit in CropAreas (use my bgracontrols branch);
           Changed ConvertPaperToResolutionUnit to ConvertCmPaperTo;
           Deleted TEMPORARY Unit Convert Functions;
           Changed MainForm edCropUnit_Type Items to Physical Units;
           Re Added BGRAControls define;

        29 Added Session can use of External Bitmap (let's save memory);
           Linux Capital Unit names fixes and Project Update;

        28 Changed TCustomTakeMethod to a non object function;
           Session LoadImage Free old Bitmap due an Assign mulfunction;
           Use of theBridge.MessageDlg in Sources;
           Added Cursor Method in Bridge Impl;

        24 MainForm CropAreas are Copied From/To Session;
           MainForm CropAreas Load/Save additional Fields in XML;
           Session use of PhysicalSizeToPixels to Crop Areas;
           Added ResolutionToCSSUnit (yet another temp function);

        23 fixed some incorrect calculations in Page percentages;
           Changed BuildPaperSizesMenu to use TPhysicalUnit;
           Use of PaperSizes global var in BuildPaperSizesMenu;
           Added temp ConvertPaperToResolutionUnit function;
           Added AddPapers to Add US and Business Cards Papers;
           Deleted Flip/Rotate Image to Initial Value in MainForm;
           Session LoadImage first Resize Image;
           Added Page Resize/Flip/Rotate Properties in Session;

        22 Added defaultResolution, BitmapWidth/Height to PhysicalSize;
           Added GetPixelsSize and SetBitmapValues to PhysicalSize
           Added defaultResolution to Session;
           Use of PageSize.SetBitmapValues on Session.LoadImage;
           Use of PageSize.GetPixelsSize on Session.ResizeImage;

        16 Use of Bitmap e PhysicalRect in TDigItPhysicalSize;
           Use of BGRABitmap PhysicalSizeConvert (pull req Pending);

        15 Added Session OnCropModeChange;