@@ -1,6 +1,10 @@
 DigIt CHANGE LOG
 ======================
 
+
+2025/08/13 Added Rulers Change with PopupMenù;
+           Added Some To-Do;
+
 2025/07/30 Deleted use of TResolutionUnit in CropAreas (use my bgracontrols branch);
            Changed ConvertPaperToResolutionUnit to ConvertCmPaperTo;
            Deleted TEMPORARY Unit Convert Functions;
@@ -68,14 +72,14 @@ DigIt CHANGE LOG
            Added MessageDlg methods to Bridge;
            Added the Digit_Bridge_Impl_UI_Form unit to register interface implementations.
 
-08 Switched MainForm to DigIt_Session Use (It must be thoroughly tested)
+        08 Switched MainForm to DigIt_Session Use (It must be thoroughly tested)
 
         07 Moved PhysicalSizeConvert in DigIt_Types;
            Changed use of TResolutionUnit to TPhysicalUnit in TDigItPhysicalSize;
            Use of TDigItPhysicalSize in Page Resize;
            function to Convert to/from  Physical/Resolution Unit (maybe deleted in future);
+           DigIt_Session don't use ImageManipulation Crop Areas but TPhysicalRectArray;
 
-DigIt_Session don't use ImageManipulation Crop Areas but TPhysicalRectArray;
         02 Added Bridge_Impl SetProgressInterface to avoid Form Progress direct use;
            Added Bridge_Impl ProgressShow useful methods;
            Added TDigItResizeUnitType and TLoadSaveXMLMethod types;
